--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -4,28 +4,28 @@
   }
 </style>
 
-<title>Hamish Williams | Storybook</title>
+<title>Olgacodes| Portfolio</title>
 <meta
   name="description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
 
 <meta name="theme-color" content="#111111" />
-<meta name="author" content="Hamish Williams" />
+<meta name="author" content="Olgacodes" />
 
 <link rel="shortcut icon" href="/favicon.svg" />
 <link rel="apple-touch-icon" href="/icon-256.png" />
 <link type="text/plain" rel="author" href="/humans.txt" />
 
-<meta property="og:image" content="https://hamishw.com/social-image.png" />
+<meta property="og:image" content="https://olgacodes.netlify.app/social-image.png" />
 <meta property="og:image:type" content="image/png" />
 <meta property="og:image:width" content="1280" />
 <meta property="og:image:height" content="675" />
 <meta property="og:image:alt" content="Banner for the site" />
 
-<meta property="og:title" content="Hamish Williams | Storybook" />
-<meta property="og:site_name" content="hamishw.com" />
-<meta property="og:url" content="https://storybook.hamishw.com" />
+<meta property="og:title" content="Olgacodes| Storybook" />
+<meta property="og:site_name" content="olgacodes.netlify.app" />
+<meta property="og:url" content="https://storybook.olgacodes.netlify.app" />
 <meta
   property="og:description"
   content="My custom design component system created from the ground up used in building my portfolio"
@@ -36,6 +36,6 @@
   name="twitter:description"
   content="My custom design component system created from the ground up used in building my portfolio"
 />
-<meta name="twitter:title" content="Hamish Williams | Storybook" />
-<meta name="twitter:site" content="@hamishMW" />
-<meta name="twitter:image" content="https://hamishw.com/social-image.png" />
+<meta name="twitter:title" content="Olgacodes | Portfolio" />
+<meta name="twitter:site" content="@uniqueolgacodes" />
+<meta name="twitter:image" content="https://olgacodes.netlify.app/social-image.png" />
